<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/first_icon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/ramadhan_kareem" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/second_icon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/ramadhan_kareem2" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card_time_pray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        android:backgroundTint="@color/background"
        android:orientation="vertical"
        app:cardCornerRadius="@dimen/base_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_icon"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/lineTimepray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:padding="@dimen/small_margin"
                android:text="@string/prayer_times"
                android:textColor="@color/text_color"
                android:textSize="@dimen/large_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:orientation="horizontal"
                android:padding="@dimen/small_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fajr"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fajr_time"
                    android:textAlignment="textEnd"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:orientation="horizontal"
                android:padding="@dimen/small_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dhuhr"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dhuhr_time"
                    android:textAlignment="textEnd"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:orientation="horizontal"
                android:padding="@dimen/small_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asr"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Asr_time"
                    android:textAlignment="textEnd"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:orientation="horizontal"
                android:padding="@dimen/small_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maghrib"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Maghrib_time"
                    android:textAlignment="textEnd"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:orientation="horizontal"
                android:padding="@dimen/small_margin"
                android:paddingBottom="@dimen/small_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/isha"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Isha_time"
                    android:textAlignment="textEnd"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.motion.widget.MotionLayout>